# mavshark

./: .gitignore  Cargo.toml  README.md
mavshark/: Cargo.toml
mavshark/src/: main.rs  mavlink_listener.rs  mavlink_monitor.rs  mavlink_sender.rs
src/: app.rs  app_logs.rs  app_messages.rs  main.rs  mavlink_io.rs  mavlink_listener.rs  mavlink_monitor.rs  record.rs  recorder_app.rs  replay.rs  rolling_window.rs  sender_app.rs  ui.rs
src/app/: file_messages.rs  incoming_messages.rs  listener.rs  logger.rs  logs.rs  mavlink_listener.rs  mavlink_sender.rs  messages.rs  rolling_window.rs  utils.rs
src/mavlink_monitor/: rolling_window.rs  widget_errors.rs  widget_frequencies.rs
