[package]
name = "mavshark"
version = "0.1.2"
authors = ["Sander Kohnstamm <sanderkohnstamm@gmail.com>"]
edition = "2021"
description = "MAVLink recorder and replayer CLI"
license = "MIT"
repository = "https://github.com/sanderkohnstamm/mavshark"
homepage = "https://github.com/sanderkohnstamm/mavshark"
documentation = "https://docs.rs/mavshark"
readme = "README.md"
keywords = ["mavlink", "cli", "drone"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
crossterm = "0.28.1"
mavlink = { version = "0.13", features = [
    "common",
    "emit-extensions",
    "format-generated-code",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
termimad = "0.31.2"
