[package]
name = "mavshark"
version = "0.3.0"
authors = ["Sander Kohnstamm <sanderkohnstamm@gmail.com>"]
edition = "2021"
description = "MAVLink message inspector TUI"
license = "MIT"
repository = "https://github.com/sanderkohnstamm/mavshark"
homepage = "https://github.com/sanderkohnstamm/mavshark"
readme = "README.md"
keywords = ["mavlink", "cli", "drone", "tui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
log = "0.4"
mavlink = { version = "0.13", features = [
    "ardupilotmega",
    "emit-extensions",
] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
