[package]
name = "mavshark"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.28"
crossterm = "0.28.1"
mavlink = { version = "0.13", features = [
    "common",
    "emit-extensions",
    "format-generated-code",
] } # Use the correct MAVLink dialect
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
